--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width = device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -18,9 +18,14 @@
       <div class="main1">
         <h1>Change Gradiant Colour</h1>
         <h2 class="changeName1">#ffffff + #ffffff</h2>
-        <button onclick="gradiantcolor()" class="btn btn-primary">
-          Change
-        </button>
+        <span>
+          <button onclick="gradiantcolor()" class="btn btn-primary">
+            Change
+          </button>
+          <span class="input">
+            <input type="text" value="10" class="dial"
+          /></span>
+        </span>
       </div>
 
       <div class="main2">
@@ -29,6 +34,9 @@
         <button onclick="hexcolor()" class="btn btn-primary">Change</button>
       </div>
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-Knob/1.2.13/jquery.knob.min.js"></script>
   </body>
   <script src="script.js"></script>
 </html>
