--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2 class="changeName2">#ffffff</h2>
         <button onclick="hexcolor()" class="btn btn-primary">Change</button>
       </div>
-    </div>
+    </div><br>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-Knob/1.2.13/jquery.knob.min.js"></script>
